# upsc_agent

./: .env.example  .gitignore  pyproject.toml
docs/: UPSC_Implementation_Roadmap.md  UPSC_Orchestrator_Master_Documentation.md  implementation_plan(overall).md  phase-1_implementation_plan.md  phase-2_implementation_plan.md  phase-3_implementation_plan.md
requirements/: base.txt  dev.txt  phase2.txt  phase4.txt
scripts/: bootstrap.ps1  run_dev.ps1  run_tests.ps1
src/: calibration.py  calibration_config.yaml  composition_engine.py  database.py  diagnostic.py  evaluator.py  exceptions.py  generator.py  logger.py  math_utils.py  models.py  rag_store.py  schemas.py  scraper.py
tests/: conftest.py  test_calibration.py  test_calibration_config.py  test_composition_engine.py  test_database.py  test_diagnostic.py  test_evaluator.py  test_generator.py  test_math_utils.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_rag_store.py  test_schemas.py  test_scraper.py
